<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_workoutName"
        android:id="@+id/label_CNW_WorkoutName"
        android:textSize="20sp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/label_CNW_TaskName"
        android:layout_marginTop="19dp" />

    <EditText
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:id="@+id/editText_CNW_WorkoutName"
        android:text=""
        android:hint="@string/workoutName"
        android:layout_marginTop="12dp"
        android:layout_toEndOf="@+id/label_CNW_WorkoutName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_taskName"
        android:id="@+id/label_CNW_TaskName"
        android:textSize="20sp"
        android:layout_alignBaseline="@+id/editText_CNW_TaskName"
        android:layout_alignBottom="@+id/editText_CNW_TaskName"
        android:layout_alignStart="@+id/btn_Save_CreateNewWorkout" />

    <EditText
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:id="@+id/editText_CNW_TaskName"
        android:text=""
        android:hint="@string/taskName"
        android:layout_marginTop="60dp"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/label_CNW_TaskName" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:text=""
        android:hint="@string/description"
        android:id="@+id/editText_CNW_Description"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/editText_CNW_TaskName"
        android:layout_alignEnd="@+id/editText_CNW_TaskName"
        android:layout_alignStart="@+id/label_CNW_TaskName"
        android:background="@color/FloralWhite"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_taskTime"
        android:id="@+id/label_CNW_taskTime"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/editText_CNW_Description"
        android:layout_alignStart="@+id/editText_CNW_Description" />

    <EditText
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:inputType="time"
        android:hint="@string/taskTime"
        android:ems="10"
        android:id="@+id/editText_CNW_TaskTime"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/editText_CNW_Description"
        android:layout_toEndOf="@+id/label_CNW_taskTime" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_taskRev"
        android:id="@+id/label_CNW_taskRev"
        android:layout_below="@+id/label_CNW_taskTime"
        android:layout_alignStart="@+id/label_CNW_taskTime"
        android:layout_marginTop="20dp" />

    <EditText
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:id="@+id/editText_CNW_TaskRev"
        android:text=""
        android:hint="@string/taskRev"
        android:layout_below="@+id/editText_CNW_TaskTime"
        android:layout_alignStart="@+id/editText_CNW_TaskTime" />

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/btn_Save_CreateNewWorkout"
        android:layout_below="@+id/editText_CNW_TaskRev"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:textSize="15sp"
        style="@style/btnStyleRed"/>

</RelativeLayout>