<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <EditText
        android:id="@+id/editText_FN_ChangeProf"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/firstName"
        android:padding="10dp"
        android:background="@drawable/edittext_top_bg"
        android:textColorHint="#bbbbbb"
        android:drawableLeft="@drawable/user"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/editText_LN_ChangeProf"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_FN_ChangeProf"
        android:layout_centerHorizontal="true"
        android:background="@drawable/edittext_default_bg"
        android:ems="10"
        android:hint="@string/lastName"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:drawableLeft="@drawable/user"
        android:textColorHint="#bbbbbb"/>

    <EditText
        android:id="@+id/editText_Pass_ChangeProf"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_LN_ChangeProf"
        android:layout_centerHorizontal="true"
        android:background="@drawable/edittext_default_bg"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:drawableLeft="@drawable/password"
        android:textColorHint="#bbbbbb"/>

    <EditText
        android:id="@+id/editText_ConfPass_ChangeProf"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_Pass_ChangeProf"
        android:layout_centerHorizontal="true"
        android:background="@drawable/edittext_default_bg"
        android:ems="10"
        android:hint="@string/confirmPassword"
        android:inputType="textPassword"
        android:padding="10dp"
        android:drawableLeft="@drawable/password"
        android:textColorHint="#bbbbbb"/>

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:id="@+id/btn_Save_ChangeProf"
        android:layout_below="@+id/editText_ConfPass_ChangeProf"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="51dp"
        android:textSize="15sp"
        style="@style/btnStyleRed"/>

</RelativeLayout>