<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <EditText
        android:id="@+id/editText_User"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/userName"
        android:padding="10dp"
        android:drawableLeft="@drawable/user"
        android:background="@drawable/edittext_top_bg"
        android:textColorHint="#bbbbbb"
        android:inputType="textPersonName"
        android:layout_marginTop="97dp"/>

    <EditText
        android:id="@+id/editText_Password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_User"
        android:layout_centerHorizontal="true"
        android:background="@drawable/edittext_botton_bg"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:drawableLeft="@drawable/password"
        android:textColorHint="#bbbbbb"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/logIn"
        android:id="@+id/btn_LogIn"
        android:layout_below="@+id/editText_Password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="52dp"
        style="@style/btnStyleGenoa"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/registration"
        android:id="@+id/btn_homeRegistration"
        android:layout_below="@+id/btn_LogIn"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        style="@style/btnStyleGenoa"/>
</RelativeLayout>