<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/image_Prof"
        android:src="@drawable/no_user_logo"
        android:contentDescription="@string/imageProfile"
        android:layout_alignTop="@+id/label_Profile"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/my_Workouts"
        android:id="@+id/btn_MyWorkouts"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/image_Prof"
        android:layout_centerHorizontal="true"
        style="@style/btnStyleGenoa"/>

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/storage_Workouts"
        android:id="@+id/btn_Storage"
        android:layout_below="@+id/btn_MyWorkouts"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        style="@style/btnStyleGenoa"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Profile"
        android:textSize="20sp"
        android:id="@+id/label_Profile"
        android:layout_marginEnd="57dp"
        android:layout_marginTop="31dp"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/btn_NewWorkout" />


</RelativeLayout>